[package]
name = "vulkano"
version = "0.14.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano"
description = "Safe wrapper for the Vulkan graphics API"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/vulkano"
homepage = "https://vulkano.rs"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
readme = "../README.md"
build = "build.rs"

[dependencies]
crossbeam = "0.7"
fnv = "1.0.6"
smallvec = "0.6.0"
lazy_static = "1"
vk-sys = { version = "0.4.0", path = "../vk-sys" }
half = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
shared_library = "0.1.7"
